Bug 803677 - Fix offsetTop/offsetParent for element with display:table-cell that have anonymous table parents.  r=bzbarsky